--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,16 @@ authors = ["Aaron Melton <aaron@aaronmelton.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 pymodbus = "^2.5.3"
-flake8 = "^4.0.1"
-black = "^21.12b0"
-pylint = "^2.12.2"
-pydocstyle = "^6.1.1"
-bandit = "^1.7.1"
 mysqlclient = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
+bandit = "^1.7.1"
+black = "^21.12b0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
+pydocstyle = "^6.1.1"
+pylint = "^2.12.2"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
