[0.7.0] - 2025-10-22 ## [0.7.0] - 2025-10-22 ### Changed - Updated Python version from 3.11 to 3.13 - Corrected Poetry configuration syntax: [tool.poetry.dev-dependencies] → [tool.poetry.group.dev.dependencies] - Updated Python package versions: - pymodbus (3.7.2 → 3.7.4, constrained to ~3.7.4 for API compatibility) - mysqlclient (2.2.4 → 2.2.6) - bandit (1.7.10 → 1.8.0) - black (24.8.0 → 24.10.0) - coverage (7.6.1 → 7.6.9) - pylint (3.3.1 → 3.3.2) - pytest (8.3.3 → 8.3.4) - pytest-env (1.1.4 → 1.1.5) - Updated Dockerfile to use Python 3.13 ### Fixed - Constrained pymodbus to 3.7.x series to maintain API compatibility (3.8+ has breaking changes)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,26 @@
 [tool.poetry]
 name = "solark_monitor"
-version = "0.6.4"
+version = "0.7.0"
 description = "A Python script to read memory register(s) from Sol-Ark Inverters and insert them into a database."
 authors = ["Aaron Melton <aaron@aaronmelton.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.13"
 aaron-common-libs = {git = "https://github.com/aaronmelton/aaron-common-libs.git"}
-pymodbus = "^3.7.2"
+pymodbus = "~3.7.4"
 pyserial = "^3.5"
-mysqlclient = "^2.2.4"
+mysqlclient = "^2.2.6"
 
-[tool.poetry.dev-dependencies]
-bandit = "^1.7.10"
-black = "^24.8.0"
-coverage = "^7.6.1"
+[tool.poetry.group.dev.dependencies]
+bandit = "^1.8.0"
+black = "^24.10.0"
+coverage = "^7.6.9"
 flake8 = "^7.1.1"
 isort = "^5.13.2"
 pydocstyle = "^6.3.0"
-pylint = "^3.3.1"
-pytest = "^8.3.3"
-pytest-env = "^1.1.4"
+pylint = "^3.3.2"
+pytest = "^8.3.4"
+pytest-env = "^1.1.5"
 toml = "^0.10.2"
 Flake8-pyproject = "^1.2.3"
 
